<resources>
    <string name="app_name">Area de Figura</string>
    <string name="box0">Cuadro</string>
    <string name="box1">Triangulo</string>
    <string name="box2">Rectangulo</string>
    <string name="box3">Circulo</string>

    <string name="to">Base</string>
    <string name="subject">Altura</string>
    <string name="lado">Lado</string>
    <string name="radio">Radio</string>
    <string name="message">Area</string>
    <string name="send">Calcular</string>
</resources>
